# ansible-nas

./: .gitignore  .pre-commit-config.yaml  .yamllint  404.html  AGENTS.md  GEMINI.md  QWEN.md  README.md  ansible.cfg  devenv.nix  index.html  nas.yml  pyproject.toml  requirements-dev.txt  requirements.yml  sitemap.xml
.cursor/rules/: ansible-galaxy-dependencies.mdc
.github/workflows/: ci.yml  integration.yml
assets/js/: 09a72b5f.991a5e18.js  09a72b5f.fa3808bf.js  0a48f752.dc93481e.js  14b97358.fa4d1ebf.js  18eb8adf.6bca0e51.js  1d3f208a.88d2b656.js  226554d7.1c2752a5.js  22e928db.31a70bd5.js  23438826.17720589.js  23438826.a56cc11b.js  27fa98f4.c0c29e77.js  2bc51d40.851dafaf.js  2c884064.7475b9f4.js  2d5a05df.843c9912.js  2e52a7ea.abb7fbaf.js  31d2e3fa.205f54b2.js  3328d05c.1dede61d.js  342fe565.4703d655.js  342fe565.c143d9b3.js  42183b19.ed612fd4.js  44614241.02dca253.js  45ecb117.52df68c1.js  45ecb117.b72717cf.js  4a77a1ee.f82d5544.js  4c26f3a6.e5553f40.js  4e4945c5.08d58a06.js  4e4945c5.4079646e.js  51c808d2.4c258dbd.js  51c808d2.56324a9b.js  53a0f2b5.fbf4938a.js  57b6adb9.70c2134e.js  57d177f8.857fc988.js  5a7afefa.f6e4b04e.js  62ed44cb.f8364966.js  65d1c99d.a61d794d.js  66c73125.eff3e9ac.js  6c0394e5.6edd3cfa.js  6db6a66e.cb4f4aec.js  6f0184e4.127bd4c8.js  73657dab.6626d333.js  (+79 more)
blog/: index.html
blog/archive/: index.html
blog/tags/: index.html
blog/tags/ansible-nas/: index.html
blog/tags/website/: index.html
blog/welcome/: index.html
docs/: index.html
docs/category/applications/: index.html
docs/category/content-management/: index.html
docs/category/contributing/: index.html
docs/category/dashboards/: index.html
docs/category/development-tools/: index.html
docs/category/download-tools/: index.html
docs/category/further-configuration/: index.html
docs/category/gaming/: index.html
docs/support/: index.html
docs/upgrading/: index.html
group_vars/: all.yml
roles/cursor_agent/: requirements.yml
roles/habitica/: requirements.yml
roles/virtual_machine/: requirements.yml
tasks/: authentik_app_blueprint.yml  ensure_host_secret.yml
tasks/templates/: authentik-app-blueprint.yaml.j2
tests/molecule/: base.yml
(+688 files in other folders)
